Update README.org with installation guide for NixOS

--- a/README.org
+++ b/README.org
@@ -1,17 +1,37 @@
 * nixos-home
-
 #+BEGIN_QUOTE
 dotfiles for Nix + home-manager (mostly for NixOS)
 #+END_QUOTE
 
 ** What's included
-
 The config is modular: see ~imports~ in =home.nix= for disabling parts of it.
 
-- =config.nix=: `nix-env` configuration: allowing unfree packages, etc.
+- =config.nix=: =nix-env= configuration: allowing unfree packages, etc.
 - =email.nix=: email applications and accounts.
   I mostly rely on =mbsync= to sync my email, and keep my passwords in =gopass=.
 - =packages.nix=: a list of packages that don't require additional configuration.
 - =programs=: stuff that you run by hand.
 - =services=: stuff that runs in the background and you don't think about it.
 - =themes.nix=: GTK and Qt theme configuration.
+
+** Installation
+*** NixOS
+1. Add =git= and =home-manager= to your ~environment.systemPackages~:
+#+BEGIN_SRC nix
+# /etc/nixos/configuration.nix
+{
+  environment.systemPackages = with pkgs; [ git home-manager ];
+}
+#+END_SRC
+#+BEGIN_SRC sh
+sudo nixos-rebuild switch
+#+END_SRC
+2. Clone this repo:
+#+BEGIN_SRC sh
+git clone https://github.com/filalex77/nixos-home.git ~/.config/nixpkgs
+#+END_SRC
+3. Run
+#+BEGIN_SRC sh
+home-manager switch
+#+END_SRC
+4. Hope and pray. (this was not tested)
