--- a/home/programs/emacs/.doom.d/config.org
+++ b/home/programs/emacs/.doom.d/config.org
@@ -501,12 +501,7 @@
 
 *** Variables
 #+BEGIN_SRC emacs-lisp
-(setq org-directory "~/org/"
-      org-gtd-directory (concat org-directory "gtd/")
-      org-default-notes-file (concat org-gtd-directory "gtd.org")
-      org-agenda-files (--map (concat org-gtd-directory it ".org")
-                              '("inbox" "gtd" "tickler"))
-      org-agenda-include-diary nil
+(setq org-agenda-include-diary nil
       org-agenda-custom-commands
       (--map
        (let* ((key (substring it 0 1))
@@ -518,23 +513,12 @@
       org-ellipsis " ▼ "
       org-blank-before-new-entry '((heading . nil)
                                    (plain-list-item . nil))
-      org-capture-templates
-      (append '(("t" "Todo" entry (file "gtd/inbox.org") "* TODO %?\n%c")
-                ("T" "Tickler" entry (file+headline "gtd/tickler.org" "Tickler") "* %?\n%U")
-                ("n" "Note" entry (file+headline "Notes.org" "Notes") "* %?\n%c"))
-              (--map `(,(s-left 2 it) ,it entry (file+headline "gtd/gtd.org" ,it) "* TODO %?\n%c")
-                     '("home" "uni" "work" "reading" "watching" "listening" "doing")))
       org-refile-targets `((,(concat org-directory "content.org") :maxlevel . 3)
                            (org-agenda-files :maxlevel . 2))
-      org-link-abbrev-alist '(("r" . "https://reddit.com/r/")
-                              ("gh" . "https://github.com/")
-                              ("yt" . "https://youtube.com/watch?v=")
-                              ("aw" . "https://wiki.archlinux.org/index.php?search=")
-                              ("gw" . "https://wiki.gentoo.org/index.php?search="))
-      org-global-properties '(("Effort_ALL" . "1:00 2:00 3:00 4:00 5:00 0:15 0:30 10:00 20:00 40:00")
-                              ("COOKIE_DATA" . "recursive"))
-      org-columns-default-format "%TODO(State) %50ITEM(Task) %10Effort{:} %10CLOCKSUM(Clocked)"
       org-list-allow-alphabetical t)
+(appendq! org-capture-templates
+          (--map `(,(s-left 2 it) ,it entry (file+headline +org-capture-todo-file ,it) "* TODO %?\n%c")
+                 '("home" "uni" "work" "reading" "watching" "listening" "doing")))
 #+END_SRC
 **** Habits
 #+BEGIN_SRC emacs-lisp
