--- a/home/programs/emacs/.doom.d/config.org
+++ b/home/programs/emacs/.doom.d/config.org
@@ -960,12 +960,12 @@ I like:
         '(("t" "Personal todo" entry
            (file+headline +org-capture-todo-file "Inbox")
            ;; HACK: use `TODO' instead of `[ ]'
-           (el-patch-swap "* [ ] %?\n%i\n%a" "* TODO %?\n%i\n%a") :prepend t)
+           (el-patch-concat "* " (el-patch-swap "[ ]" "TODO") " %?\n%i\n%a") :prepend t)
           ("n" "Personal notes" entry
            (file+headline +org-capture-notes-file "Inbox")
            "* %u %?\n%i\n%a" :prepend t)
           ("j" "Journal" entry
-           (file+datetree +org-capture-journal-file "Inbox")
+           (file+olp+datetree +org-capture-journal-file "Inbox")
            "* %U %?\n%i\n%a" :prepend t)
 
           ;; Will use {project-root}/{todo,notes,changelog}.org, unless a
@@ -978,10 +978,10 @@ I like:
            "* TODO %?\n%i\n%a" :prepend t)
           ("pn" "Project-local notes" entry  ; {project-root}/notes.org
            (file+headline +org-capture-project-notes-file "Inbox")
-           "* %?\n%i\n%a" :prepend t)
+           "* %U %?\n%i\n%a" :prepend t)
           ("pc" "Project-local changelog" entry  ; {project-root}/changelog.org
            (file+headline +org-capture-project-changelog-file "Unreleased")
-           "* %?\n%i\n%a" :prepend t)
+           "* %U %?\n%i\n%a" :prepend t)
 
           ;; Will use {org-directory}/{+org-capture-projects-file} and store
           ;; these under {ProjectName}/{Tasks,Notes,Changelog} headings. They
@@ -995,12 +995,12 @@ I like:
            :prepend nil)
           ("on" "Project notes" entry
            (function +org-capture-central-project-notes-file)
-           "* %?\n %i\n %a"
+           "* %U %?\n %i\n %a"
            :heading "Notes"
            :prepend t)
           ("oc" "Project changelog" entry
            (function +org-capture-central-project-changelog-file)
-           "* %?\n %i\n %a"
+           "* %U %?\n %i\n %a"
            :heading "Changelog"
            :prepend t)))
 
