Add borgbackup with rsync.net

--- a/configuration.org
+++ b/configuration.org
@@ -186,6 +186,46 @@ services.bitlbee = {
   plugins = with pkgs; [ bitlbee-discord ];
 };
 #+END_SRC
+** borgbackup
+#+BEGIN_SRC nix
+services.borgbackup.jobs = {
+  home = {
+    paths = [
+      "~/Backups"
+      "~/dev"
+      "~/gallery"
+      "~/org"
+      "~/priv"
+    ];
+    exclude = [
+      "*/.git"
+      "*/target"
+      "*/_?build"
+      "*/vendor"
+      "*/tmp"
+      "*/cache"
+      "*/node_modules"
+      "*/dev/contrib"
+    ];
+    repo = "19362@ch-s012.rsync.net:backups";
+    extraArgs = "--remote-path=borg1";
+    encryption = {
+      mode = "repokey";
+      passCommand = "${pkgs.pass} show borgbackup";
+    };
+    compression = "zstd";
+    prune.keep = {
+      within = "1d";
+      daily = 7;
+      weekly = 4;
+      monthly = -1;
+    };
+    startAt = "16:00";
+    user = "brightone";
+    group = "nogroup";
+  };
+};
+#+END_SRC
 ** TODO Dbus
 *** Add dconf to packages
 #+BEGIN_SRC nix
