--- a/home/programs/emacs/.doom.d/config.org
+++ b/home/programs/emacs/.doom.d/config.org
@@ -910,9 +910,8 @@ Discord Rich presence
 ** Rust
 *** Use rust-analyzer
 #+BEGIN_SRC emacs-lisp
-(after! rustic
-  (when (executable-find "ra_lsp_server")
-    (setq rustic-lsp-server 'rust-analyzer)))
+(when (executable-find "ra_lsp_server")
+  (setq lsp-rust-server 'rust-analyzer))
 #+END_SRC
 ** TRAMP
 *** Enable =yadm= method for Magit support
